--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,6 +3,7 @@
     <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
     <script src="/static/js/jquery-1.9.1.js"></script>
+    <script src="/static/js/script.js"></script>
     <script src="/static/js/bootstrap.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% if title %}
