added down voting, checking not negative votes, and order by descending

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,8 +18,8 @@
         <div class="navbar-inner">
           <a class="brand" href="#">VentureOn</a>
           <ul class="nav">
-            <li class="active"><a href="{{url_for('index')}}">Home</a></li>
-            <li class><a href='#'>Map</a></li>
+            <li><a href="{{url_for('index')}}">Home</a></li>
+            <li><a href='#'>Map</a></li>
             {% if g.user.is_authenticated() %}
             <li><a href="{{ url_for('user', nickname = g.user.nickname) }}">Your Profile</a></li>
             <li><a href="{{url_for('logout') }}">Logout</a></li>
