--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="navbar">
         <div class="navbar-inner">
-          <a class="brand" href="#">VentureOn</a>
+          <a class="brand" href="{{url_for('index')}}">VentureOn</a>
           <ul class="nav">
             <li><a href="{{url_for('index')}}">Home</a></li>
             <li><a href='#'>Map</a></li>
