Made some things look pretty: frontpage and login, started to work on adding new Posts

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,9 +5,9 @@
 {% else%}
 <h1>Hi, {{user.nickname}}!</h1>
 {% endif %}
-<table class="table">
+<hr>
+{% include 'flash.html' %}
 {% for post in posts %}
     {% include 'post.html' %}
 {% endfor %}
-</table>
 {% endblock %}
