--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,53 +1,44 @@
 <html>
   <head>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
     <script src="/static/js/jquery-1.9.1.js"></script>
     <script src="/static/js/script.js"></script>
     <script src="/static/js/bootstrap.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% if title %}
-    <title>{{title}} - microblog</title>
-    {% else %}
-    <title>Welcome - microblog</title>
-    {% endif %}
   </head>
   <body>
-    <div class="container">
+  <div class="container">
+    <div class = "masthead">
+    <h2> VentureOn </h2>
       <div class="navbar">
         <div class="navbar-inner">
-          <a class="brand" href="{{url_for('index')}}">VentureOn</a>
+          <div class = "contrainer">
           <ul class="nav">
-            <li><a href="{{url_for('index')}}">Home</a></li>
+            <li class = "active"><a href="{{url_for('index')}}">Home</a></li>
+            <li><a href="{{url_for('newVenture')}}">Post a New Venture</a></li>
             <li><a href='#'>Map</a></li>
             {% if g.user.is_authenticated() %}
             <li><a href="{{ url_for('user', nickname = g.user.nickname) }}">Your Profile</a></li>
+            
             <li><a href="{{url_for('logout') }}">Logout</a></li>
             {% else %}
             <li><a href="{{url_for('login')}}">Log In / Sign Up</a></li>
             {% endif %}
           </ul>
+        </div>
+      </div>
       </div>
     </div>
-  </div>
-  <div class="container-fluid">
-    <div class="row-fluid">
+  <div class="row-fluid">
       <div class="span10">
-        <hr>
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        <ul>
-    	   {% for message in messages %}
-    		  <li>{{message}}</li>
-    	 {% endfor %}
-        </ul>
-        {% endif %}
-        {% endwith %}
       {% block content %}{% endblock %}
       </div>
       <div class="span2">
+        <h3> Top Ventures </h3>
+        <hr>   
       </div>
-    </div>
   </div>  
   </body>
 </html>
