--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -1,5 +1,11 @@
+<div class= "well">
 <table id = "post{{post.id}}"> 
     <tr valign="top">
-        <td><a onclick="javascript:vote('up','{{post.id}}')"><img src = "/static/img/up.png" id = "up"></a><br><a onclick="javascript:vote('down','{{post.id}}')"><img src="/static/img/down.png"></a></td><td id="vote{{post.id}}">{{post.vote}}</td><td><img src="{{post.author.avatar(50)}}"></td><td><i>{{post.author.nickname}} says:</i><br>{{post.body}}</td>
+        <td><a onclick="javascript:vote('up','{{post.id}}')"><img src = "/static/img/up.png" id = "up"></a><br>
+          <a onclick="javascript:vote('down','{{post.id}}')"><img src="/static/img/down.png"></a></td>
+          <td id="vote{{post.id}}">{{post.vote}}</td>
+          <td><img src="{{post.author.avatar(50)}}"></td>
+          <td><i>{{post.author.nickname}} says:</i><br>{{post.body}}</td>
     </tr>
 </table>
+</div>
