working on submitting a post, added tag system

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,15 +7,50 @@
     <script src="/static/js/script.js"></script>
     <script src="/static/js/bootstrap.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style type="text/css">
+      .navbar .navbar-inner {
+        padding: 0;
+      }
+      .navbar .nav {
+        margin: 0;
+        display: table;
+        width: 100%;
+      }
+      .navbar .nav li {
+        display: table-cell;
+        width: 1%;
+        float: none;
+      }
+      .navbar .nav li a {
+        font-weight: bold;
+        text-align: center;
+        border-left: 1px solid rgba(255,255,255,.75);
+        border-right: 1px solid rgba(0,0,0,.1);
+      }
+      .navbar .nav li:first-child a .brand{
+        border-left: 0;
+        border-radius: 3px 0 0 3px;
+      }
+      .navbar .nav li:last-child a {
+        border-right: 0;
+        border-radius: 0 3px 3px 0;
+      }
+      .navbar .nav li a .brand {
+        font-weight: bold;
+        text-align: center;
+        border-left: 1px solid rgba(255,255,255,.75);
+        border-right: 1px solid rgba(0,0,0,.1);
+
+      }
+    </style>
   </head>
   <body>
   <div class="container">
-    <div class = "masthead">
-    <h2> VentureOn </h2>
       <div class="navbar">
         <div class="navbar-inner">
           <div class = "contrainer">
           <ul class="nav">
+            
             <li class = "active"><a href="{{url_for('index')}}">Home</a></li>
             <li><a href="{{url_for('newVenture')}}">Post a New Venture</a></li>
             <li><a href='#'>Map</a></li>
@@ -28,7 +63,6 @@
             {% endif %}
           </ul>
         </div>
-      </div>
       </div>
     </div>
   <div class="row-fluid">
